# table_reservation_service

./: Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routers/: __init__.py  reservations.py  tables.py
app/core/: db.py  settings.py
app/migrations/: env.py
app/migrations/versions/: c02f1d15f2ae_initial_migration.py
app/models/: __init__.py  reservation.py  table.py
app/schemas/: reservation.py  table.py
app/services/: reservation_services.py  table_services.py
tests/: conftest.py
tests/api/routers/: test_reservations.py  test_tables.py
